[gd_scene load_steps=58 format=2]

[ext_resource path="res://Scenes/Gustavo/Bullets/BulletPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Gustavo/Bullets/Laser.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Gustavo/PlayerShoot.gd" type="Script" id=3]
[ext_resource path="res://Assets/Spritesheets/Player/death.png" type="Texture" id=4]
[ext_resource path="res://Assets/Spritesheets/Player/run_n_shoot.png" type="Texture" id=5]
[ext_resource path="res://Assets/Spritesheets/Player/Idle.png" type="Texture" id=6]
[ext_resource path="res://Assets/Spritesheets/Player2/on_water.png" type="Texture" id=7]
[ext_resource path="res://Assets/Spritesheets/Player/lowered.png" type="Texture" id=8]
[ext_resource path="res://Assets/Spritesheets/Player/jump.png" type="Texture" id=9]
[ext_resource path="res://Assets/Spritesheets/Player/look_up.png" type="Texture" id=10]
[ext_resource path="res://Assets/Spritesheets/Player/run_n_shoot_down.png" type="Texture" id=11]
[ext_resource path="res://Assets/Spritesheets/Player/run_n_shoot_up.png" type="Texture" id=12]
[ext_resource path="res://Assets/Spritesheets/Player/run.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sounds/NES - Contra - Effects/Contra SFX (1).wav" type="AudioStream" id=14]

[sub_resource type="RectangleShape2D" id=88]
extents = Vector2( 10, 17 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 24, 42 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 24, 42 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 49, 42 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 24, 0, 24, 42 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 24, 42 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 10 )
region = Rect2( 24, 0, 24, 42 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 24, 42 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 13 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 13 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 13 )
region = Rect2( 96, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 13 )
region = Rect2( 160, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 42 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 32, 42 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "death",
"speed": 8.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "fall_on_water",
"speed": 8.0
}, {
"frames": [ SubResource( 57 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 58 ) ],
"loop": true,
"name": "idle_look_up",
"speed": 5.0
}, {
"frames": [ SubResource( 59 ) ],
"loop": true,
"name": "idle_lowered",
"speed": 5.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "idle_shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ) ],
"loop": true,
"name": "idle_shoot_up",
"speed": 5.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "jump",
"speed": 8.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "run_on_water",
"speed": 5.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "run_shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 82 ), SubResource( 83 ), SubResource( 84 ) ],
"loop": true,
"name": "run_shoot_down",
"speed": 5.0
}, {
"frames": [ SubResource( 85 ), SubResource( 86 ), SubResource( 87 ) ],
"loop": true,
"name": "run_shoot_up",
"speed": 5.0
}, {
"frames": [ SubResource( 79 ) ],
"loop": true,
"name": "shoot_on_water",
"speed": 5.0
}, {
"frames": [ SubResource( 80 ) ],
"loop": true,
"name": "shoot_on_water_up_45",
"speed": 5.0
}, {
"frames": [ SubResource( 81 ) ],
"loop": true,
"name": "shoot_on_water_up_90",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "run"

[sub_resource type="RectangleShape2D" id=89]
extents = Vector2( 4, 1 )

[node name="Player1Animations" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 3 )
bullet = ExtResource( 1 )
laser = ExtResource( 2 )
gun_shoot_audio = [ ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ) ]

[node name="BulletPosition" type="Position2D" parent="."]
position = Vector2( 12, -1 )

[node name="CoolDownTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 88 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/run = SubResource( 3 )

[node name="ShootAudio" type="AudioStreamPlayer2D" parent="."]
autoplay = true

[node name="FootBoxCollision" type="CollisionShape2D" parent="."]
position = Vector2( -3, 20.1 )
shape = SubResource( 89 )

[connection signal="timeout" from="CoolDownTimer" to="." method="_on_CoolDownTimer_timeout"]
